# fall2025_sps_genai

./: .gitignore  pyproject.toml  test_import.py  train_classifier.py  train_vae.py
app/: bigram_model.py  classifier_model.pth  diffusion_model.py  energy_model.py  main.py  mnist_gan.py  train_mnist_gan.py  train_quick.py  vae_model.pth
app/helper_lib/: data_loader.py  losses.py  model.py  trainer.py
app/models/: discriminator.pth  generator.pth
