[project]
name = "sps-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "en-core-web-md",
    "fastapi[standard]>=0.117.1",
    "marimo>=0.16.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.7",
]

[tool.uv.sources]
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }
